<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_automation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vyasakondi009@gmail.com">askv</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry-msgs</depend>
  <!-- For image and Opencv  -->
    <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


<!-- Took the gazebbo_ros depend statements from aws -->
   <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
<!-- 

  <export>
    <build_type>ament_cmake</build_type>
  </export> -->


<!-- Took the gazebbo_ros export statements from aws -->


  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
